# filerec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_image.img
docs/: blackbox_testing.md  carving_architecture.md  developer_guide.md  index.md  project_status.md  project_structure.md  recovery_status.md  test_results.md  test_summary.md  testing.md  zip_carver.md
include/carvers/: base_carver.h  jpeg_carver.h  pdf_carver.h  png_carver.h  zip_carver.h
include/core/: disk_scanner.h  file_system_detector.h  recovery_engine.h
include/filesystems/: ext4_parser.h  fat32_parser.h  ntfs_parser.h
include/interfaces/: file_carver.h  filesystem_parser.h
include/utils/: file_utils.h  logger.h  progress_tracker.h  types.h
scripts/: analyze_filesystem.sh  blackbox_test.sh  blackbox_test_simple.sh  filesystem_test.sh  test.sh
src/: main.cpp
src/carvers/: base_carver.cpp  jpeg_carver.cpp  pdf_carver.cpp  png_carver.cpp  zip_carver.cpp
src/core/: disk_scanner.cpp  file_system_detector.cpp  recovery_engine.cpp
src/filesystems/: ext4_parser.cpp  ext4_parser_broken.cpp  fat32_parser.cpp  ntfs_parser.cpp
src/utils/: file_utils.cpp  logger.cpp  progress_tracker.cpp
test_output/blackbox_recovery/: original_files.md5  original_files_info.txt
tests/: CMakeLists.txt  test_carver_integration.cpp  test_carver_performance.cpp  test_disk_scanner.cpp  test_disk_scanner_old.cpp  test_ext4_parser.cpp  test_fat32_parser.cpp  test_file_system_detector.cpp  test_jpeg_carver.cpp  test_logger.cpp  test_main.cpp  test_ntfs_parser.cpp  test_pdf_carver.cpp  test_png_carver.cpp  test_recovery_engine_fixed.cpp  test_zip_carver.cpp
